--- a/index.html
+++ b/index.html
@@ -53,18 +53,20 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
               <ul class="navbar-nav ms-auto">
                 <li class="nav-item px-3">
-                  <a class="nav-link active" style="color:white; font-weight: 900;" aria-current="page" href="index.html"
-                    >About Us</a
+                  <a class="nav-link active" style="color:white; font-weight: 900;">General</a
                   >
                 </li>
                 <li class="nav-item px-3">
-                  <a class="nav-link active" style="color:white; font-weight: 900;" href="store.html">Shop Online</a>
+                  <a class="nav-link active" style="color:white; font-weight: 900;">Academics</a>
                 </li>
                 <li class="nav-item px-3">
-                  <a class="nav-link active" style="color:white; font-weight: 900;" href="location.html">Location</a>
+                  <a class="nav-link active" style="color:white; font-weight: 900;">College Life</a>
                 </li>
                 <li class="nav-item px-3">
-                  <a class="nav-link active" style="color:white; font-weight: 900;" href="contact.html">Contact Us</a>
+                  <a class="nav-link active" style="color:white; font-weight: 900;">Cost</a>
+                </li>
+                <li class="nav-item px-3"></li>
+                  <a class="nav-link active" style="color:white; font-weight: 900;">Alumni</a>
                 </li>
               </ul>
             </div>
@@ -76,6 +78,23 @@
 
       <div class="background" style="background-image: url(images/psuimg.jpg);">
 
+      </div>
+
+
+      <div class="container-fluid">
+        <div class="row">
+          <div class="text-center col-8">
+            <img src="images/building.jpg" class="mt-5 mx-5" style="border-radius: 2%;">
+          </div>
+          <div class="col-4 text-center">
+            <div class="mt-5 mx-5" style="color: #0f1d41;">
+              <h1>We Are Penn State</h1>
+              <p>At Penn State, success is fueled by curiosity, collaboration, and a drive to make a difference. Join our community—more than 775,000 strong—dedicated to shaping a better world through education, research, and service.</p>
+            </div>
+              
+          </div>
+          
+        </div>
       </div>
 
         <footer>
