--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
+
+
   <!-- Bootstrap CSS v5.2.1 -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
@@ -22,6 +24,19 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+
+  <link
+      href="https://fonts.googleapis.com/css?family=Cookie"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+      integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
 </head>
 
 <body>
@@ -69,7 +84,7 @@
 
   <!--Location and description-->
   <div class="container-fluid px-0">
-    <div class="row">
+    <div class="row pb-5">
       <div class="text-center col-12 col-lg-8">
         <img src="images/building.jpg" class="mt-5 mx-lg-5" style="border-radius: 2%; width: 90%;">
       </div>
@@ -88,7 +103,8 @@
       </div>
 
     </div>
-    <div class="row pt-5">
+    <hr>
+    <div class="row">
 
       <div class="col-12 col-lg-6 text-center">
         <div class="mt-5 mx-5 pt-serif-bold d-flex justify-content-center align-items-center h-100 "
@@ -169,10 +185,77 @@
 
   </div>
 
+  <div class="container-fluid" style="background-color: #0f1d41;">
+    <h1 class="text-center pt-serif-bold py-3 mb-0" style="color:white;">Our Facilities</h1>
+  </div>
 
-  <footer>
-    <!-- place footer here -->
+
+  <!--Footer starts-->
+  <footer class="footer-distributed" style="background-color: #0f1d41;">
+    <div class="footer-left">
+      <img src="images/psuwhite.png" width="20%" />
+
+      <p class="footer-links">
+        <a href="index.html">General</a>
+        ·
+        <a href="store.html">Academics</a>
+        ·
+        <a href="location.html">College Life</a>
+        ·
+        <a href="contact.html">Cost</a>
+        ·
+        <a href="contact.html">Alumni</a>
+      </p>
+
+      <p class="footer-company-name">Penn State &copy; 2024</p>
+    </div>
+
+    <div class="footer-center">
+      <div>
+        <i class="fa-solid fa-location-dot"></i>
+        <p><span>204 East Calder Way</span> State College, PA 16801</p>
+      </div>
+
+      <div>
+        <i class="fa fa-phone"></i>
+        <p>+1 (814) 867-4388</p>
+      </div>
+
+      <div>
+        <i class="fa-solid fa-calendar-days"></i>
+        <p class="fw-bolder">Phone Hours:</p>
+        <ul style="color: white">
+          <li>Saturday: 8:00 AM to 4:00 PM</li>
+          <li>Weekdays: 7:00 AM to 6:00 PM</li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="footer-right">
+      <p class="footer-company-about">
+        <span class="fw-bolder">About us</span>
+        Founded in 1855, Penn State is a world-class public research university dedicated to providing a top-tier education and fostering academic innovation. With a diverse and vibrant community, we offer over 160 undergraduate majors and countless opportunities for students to engage in. Penn State is committed to preparing future leaders with a global perspective, grounded in integrity, excellence, and service.
+      </p>
+
+      <div class="footer-icons">
+        <a href="https://www.facebook.com/pennstate/"
+          ><i class="fa-brands fa-facebook"></i
+        ></a>
+        <a href="https://www.instagram.com/pennstate/"
+          ><i class="fa-brands fa-instagram"></i
+        ></a>
+        <a href="https://x.com/Penn_State"
+          ><i class="fa-brands fa-x-twitter"></i
+        ></a>
+        <a href="https://www.snapchat.com/add/penn_state"
+          ><i class="fa-brands fa-snapchat"></i
+        ></a>
+      </div>
+    </div>
   </footer>
+  <!--Footer Ends here-->
+
+
   <!-- Bootstrap JavaScript Libraries -->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
     integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
