--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <li class="nav-item px-3">
               <a class="nav-link active" style="color:white; font-weight: 900;">Cost</a>
             </li>
-            <li class="nav-item px-3"></li>
+            <li class="nav-item px-3">
             <a class="nav-link active" style="color:white; font-weight: 900;">Alumni</a>
             </li>
           </ul>
@@ -187,6 +187,33 @@
 
   <div class="container-fluid" style="background-color: #0f1d41;">
     <h1 class="text-center pt-serif-bold py-3 mb-0" style="color:white;">Our Facilities</h1>
+
+    <div class="row pb-4">
+      <div class="col-12">
+        <img src="images/fbfield.png" width="100%" style="border-radius: 3%;">
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-6">
+        <img src="images/fb.png" width="100%" style="border-radius: 2%;">
+      </div>
+      <div class="col-6">
+        <img src="images/basketball.png" width="100%" style="border-radius: 2%;">
+      </div>
+    </div>
+    
+    <div class="row py-4">
+      <div class="col-4">
+        <img src="images/weightroom.png" width="100%" style="border-radius: 2%;">
+      </div>
+      <div class="col-4">
+        <img src="images/locker.png" width="100%" style="border-radius: 2%;">
+      </div>
+      <div class="col-4">
+        <img src="images/indoor.png" width="100%" style="border-radius: 2%;">
+      </div>
+    </div>
   </div>
 
 
