--- a/academics.html
+++ b/academics.html
@@ -67,56 +67,75 @@
   </header>
   <!--Navbar ends here-->
 
-  <div class="background" style="background-image: url(images/psuimg.jpg)"></div>
+  <div class="background" style="background-image: url(images/campus.jpg)"></div>
 
-  <!--Location and description-->
-  <div class="container-fluid px-0">
-    <div class="row pb-5">
-      <div class="text-center col-12 col-lg-8">
-        <img src="images/building.jpg" class="mt-5 mx-lg-5" style="border-radius: 2%; width: 90%" />
+    <!--Academic information and advisory-->
+    <main style="background-color: #0f1d41">
+        <div class="container">
+          <h1 class="text-center pt-serif-bold pt-3" style="color: white">
+            Explore the Available Majors!
+          </h1>
+  
+          <input type="text" id="searchInput" class="form-control mb-3 fw-bolder mt-4" placeholder="Search..." />
+  
+          <div class="row row-cols-1 row-cols-md-3 g-4 p-4 pt-serif-bold" id="productContainer">
+            <!-- Product cards will be dynamically added here -->
+          </div>
+        </div>
+      </main>
+    </div>
+    <div class="container mt-5">
+      <div class="row">
+        <div class="col-12">
+          <div class="text-center">
+            <img src="images/advisory.jpg" width="100%" style="box-shadow: 2px 1px 6px 3px #0f1d41; border-radius: 4px" />
+          </div>
+  
+          <p class="mt-2 pacifico-regular" style="color: #0f1d41">
+            Our Awesome Advisory Board!
+          </p>
+        </div>
       </div>
-      <div class="col-12 col-lg-4 text-center">
-        <div class="mt-5 mx-5 pt-serif-bold d-flex justify-content-center align-items-center h-100"
-          style="color: #0f1d41">
-          <div>
-            <h1 class="pb-5" style="font-size: 3rem; font-weight: 900">
-              We Are Penn State
-            </h1>
-            <p>
-              At Penn State, success is fueled by curiosity, collaboration,
-              and a drive to make a difference. Join our community—more than
-              775,000 strong—dedicated to shaping a better world through
-              education, research, and service.
-            </p>
+      <h3 class="text-center pt-serif-bold">Contact Our Advisory Board:</h3>
+      <div class="row mt-5" style="color: #0f1d41">
+        <div class="col-12 col-lg-6">
+          <img src="images/sif.png" width="100%" />
+        </div>
+        <div class="col-12 col-lg-6">
+          <div class="d-flex justify-content-center align-items-center h-100">
+            <div>
+              <p class="pt-serif-bold">
+                <u>Location:</u> 204 East Calder Way, Suite 200, State College,
+                PA 16801
+              </p>
+              <p class="pt-serif-bold"><u>Phone:</u> 814-867-4388</p>
+              <p class="pt-serif-bold"><u>Fax:</u> 814-863-8138</p>
+              <p class="pt-serif-bold"><u>Email:</u> PennStateSLS@psu.edu</p>
+              <ul>
+                <li>
+                  <p class="pt-serif-bold">
+                    <a href="https://studentaffairs.psu.edu/legalservices/advisory-board" target="_blank">How to find our
+                      office</a>
+                  </p>
+                </li>
+                <li>
+                  <p class="pt-serif-bold">
+                    <a href="https://studentaffairs.psu.edu/legalservices/intake" target="_blank">Intake form</a>
+                  </p>
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
     </div>
-    <hr />
-    <div class="row">
-      <div class="col-12 col-lg-6 text-center">
-        <div class="mt-5 mx-5 pt-serif-bold d-flex justify-content-center align-items-center h-100"
-          style="color: #0f1d41">
-          <div>
-            <h1 class="pb-5" style="font-size: 3rem; font-weight: 900">
-              Penn State Map
-            </h1>
-            <p>
-              Penn State University is located in State College, Pennsylvania,
-              nestled in the scenic central region of the state, surrounded by
-              mountains and rural landscapes.
-            </p>
-            <p>Located at: 201 Old Main, University Park, PA 16802</p>
-            <p>Contact us at: (814) 865-4700</p>
-          </div>
-        </div>
-      </div>
-      <div class="text-center col-12 col-lg-6">
-        <img src="images/pennMap.jpg" class="mt-5 mx-lg-5" style="border-radius: 2%; width: 90%" />
-      </div>
-    </div>
-
+  
     
+    
+
+
+
+
 
   <!--Footer starts-->
   <footer class="footer-distributed" style="background-color: #0f1d41">
